--- a/src/gallery/gallery.scss
+++ b/src/gallery/gallery.scss
@@ -4,4 +4,13 @@
   width: 100%;
   border: 1px solid red;
   max-width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  .gallery-post {
+    display: inline-flex;
+    margin: .25rem;
+  }
 }
