--- a/src/gallery/scss/app.scss
+++ b/src/gallery/scss/app.scss
@@ -1,27 +1,2 @@
-#gm-frontend-gallery {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  border: 1px solid red;
-  max-width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-
-  .gallery-post {
-    display: inline-flex;
-    margin: .25rem;
-    position: relative;
-
-    .gm-gallery-post-content {
-      position: absolute;
-      height: 100%;
-      width: 100%;
-      background-color: #000000;
-      opacity: .8;
-      color: white;
-      padding: .5rem;
-    }
-  }
-}
+@import '_gm-frontend-gallery';
+@import 'gallery-post';
