Cursor set to pointer

--- a/src/gallery/scss/_gallery-post.scss
+++ b/src/gallery/scss/_gallery-post.scss
@@ -5,6 +5,7 @@
     display: inline-flex;
     margin: .25rem;
     position: relative;
+    cursor: pointer;
 
     &-content {
       position: absolute;
