--- a/src/gallery/scss/_gallery-light-box.scss
+++ b/src/gallery/scss/_gallery-light-box.scss
@@ -8,5 +8,27 @@
     background-color: rgba($themeColor1,.8);
     top: 0;
     left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &-content {
+      width: 80%;
+      height: 80%;
+      background-color: $themeColor2;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr;
+
+      .left {
+        img {
+          object-fit: contain;
+          width: 100%;
+          height: 100%;
+          max-height: 100%;
+          max-width: 100%;
+        }
+      }
+    }
   }
 }
