--- a/src/gallery/scss/_gallery-light-box.scss
+++ b/src/gallery/scss/_gallery-light-box.scss
@@ -20,7 +20,7 @@
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr;
 
-      .left {
+      &-col-1 {
         img {
           object-fit: contain;
           width: 100%;
@@ -28,6 +28,9 @@
           max-height: 100%;
           max-width: 100%;
         }
+      }
+      &-col-2 {
+
       }
     }
   }
