Grid rules for second lightbox column

--- a/src/gallery/scss/_gallery-light-box.scss
+++ b/src/gallery/scss/_gallery-light-box.scss
@@ -35,6 +35,8 @@
         }
       }
       &-col-2 {
+        display: grid;
+        grid-template-rows: min-content 1fr min-content;
         &-title {
 
         }
