--- a/src/gallery/scss/_gallery-light-box.scss
+++ b/src/gallery/scss/_gallery-light-box.scss
@@ -46,7 +46,7 @@
         &-images {
           display: grid;
           grid-template-rows: 1fr;
-          grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+          grid-template-columns: repeat(5, 1fr);
           grid-gap: .2rem;
         }
       }
