--- a/src/gallery/scss/_variables.scss
+++ b/src/gallery/scss/_variables.scss
@@ -1,7 +1,9 @@
 // Colors
 $black: #000000;
 $white: #FFFFFF;
+$active: #5bc0de;
 
 $themeColor0: transparent;
 $themeColor1: $black;
 $themeColor2: $white;
+$themeColor3: $active;
