Mobile lightbox display

--- a/src/gallery/scss/_variables.scss
+++ b/src/gallery/scss/_variables.scss
@@ -7,3 +7,9 @@ $themeColor0: transparent;
 $themeColor1: $black;
 $themeColor2: $white;
 $themeColor3: $active;
+
+// Breakpoints
+$small: 576px;
+$medium: 768px;
+$large: 992px;
+$x-large: 1200px;
