--- a/src/gallery/scss/_gallery-light-box.scss
+++ b/src/gallery/scss/_gallery-light-box.scss
@@ -13,12 +13,19 @@
     align-items: center;
 
     &-content {
-      width: 80%;
-      height: 80%;
+      width: 100%;
+      height: 100%;
       background-color: $themeColor2;
       display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr;
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr min-content;
+
+      @media (min-width: $medium) {
+        width: 80%;
+        height: 80%;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+      }
 
       &-col-1,
       &-col-2 {
