--- a/src/gallery/scss/_gallery-light-box.scss
+++ b/src/gallery/scss/_gallery-light-box.scss
@@ -19,6 +19,7 @@
       display: grid;
       grid-template-columns: 1fr;
       grid-template-rows: 1fr min-content;
+      z-index: 1;
 
       @media (min-width: $medium) {
         width: 80%;
@@ -65,6 +66,30 @@
               outline: 2px solid $themeColor3;
             }
           }
+        }
+      }
+    }
+    &-navigation {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      z-index: 0;
+
+      div {
+        color: $themeColor2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        height: 100%;
+        width: 10%;
+        font-size: 2rem;
+
+        &:last-child {
+          margin-left: auto;
         }
       }
     }
