--- a/src/gallery/scss/_gallery-light-box.scss
+++ b/src/gallery/scss/_gallery-light-box.scss
@@ -13,9 +13,9 @@
     align-items: center;
 
     .gm-gallery-light-box {
-      width: 80%;
-      height: 80%;
-      grid-template-columns: 1fr 1fr;
+      width: 100%;
+      height: 100%;
+      grid-template-columns: 1fr;
       grid-template-rows: 1fr min-content;
       grid-column-gap: 1rem;
       display: grid;
@@ -27,7 +27,7 @@
         justify-content: center;
         align-items: center;
         grid-column: 1;
-        grid-row: 1 / span 2;
+        grid-row: 1;
         img {
           object-fit: contain;
           max-height: 100%;
@@ -36,13 +36,13 @@
         }
       }
       &-text {
-        grid-column: 2;
+        grid-column: 1;
         grid-row: 1;
         display: grid;
         grid-template-rows: min-content 1fr;
       }
       &-images {
-        grid-column: 2;
+        grid-column: 1;
         grid-row: 2;
         display: grid;
         grid-template-rows: 1fr;
@@ -55,6 +55,25 @@
           &.active {
             outline: 2px solid $themeColor3;
           }
+        }
+      }
+
+      @media (min-width: $medium) {
+        width: 80%;
+        height: 80%;
+        grid-template-columns: 1fr 1fr;
+
+        &-main-image {
+          grid-column: 1;
+          grid-row: 1 / span 2;
+        }
+        &-text {
+          grid-column: 2;
+          grid-row: 1;
+        }
+        &-images {
+          grid-column: 2;
+          grid-row: 2;
         }
       }
     }
