--- a/src/gallery/scss/_gallery-light-box.scss
+++ b/src/gallery/scss/_gallery-light-box.scss
@@ -28,11 +28,22 @@
         align-items: center;
         grid-column: 1;
         grid-row: 1;
+        position: relative;
         img {
           object-fit: contain;
           max-height: 100%;
           max-width: 100%;
           height: 100%;
+        }
+      }
+      &-navigation {
+        position: absolute;
+        display: flex;
+        align-items: flex-start;
+        width: 100%;
+
+        &-right {
+          margin-left: auto;
         }
       }
       &-text {
