--- a/src/gallery/scss/_gallery-light-box.scss
+++ b/src/gallery/scss/_gallery-light-box.scss
@@ -27,6 +27,9 @@
           opacity: 1;
           z-index: 1;
         }
+        .gm-gallery-light-box-navigation {
+          opacity: 0;
+        }
       }
 
       &-main-image {
@@ -48,6 +51,7 @@
         display: flex;
         align-items: flex-start;
         width: 100%;
+        padding: .25rem;
 
         &-left,
         &-right {
