Padding on &-text

--- a/src/gallery/scss/_gallery-light-box.scss
+++ b/src/gallery/scss/_gallery-light-box.scss
@@ -82,6 +82,7 @@
         transition: opacity .2s;
         background-color: rgba($themeColor1, .8);
         color: $themeColor2;
+        padding: 1rem .25rem
       }
       &-details {
         grid-column: 1;
