--- a/src/gallery/scss/_gallery-light-box.scss
+++ b/src/gallery/scss/_gallery-light-box.scss
@@ -68,6 +68,7 @@
           align-items: center;
           padding-bottom: 5px;
           justify-content: center;
+          cursor: pointer;
         }
 
         &-right {
