&-details has align-items: flex-end

--- a/src/gallery/scss/_gallery-light-box.scss
+++ b/src/gallery/scss/_gallery-light-box.scss
@@ -90,6 +90,9 @@
       &-details {
         grid-column: 1;
         grid-row: 2;
+        display: flex;
+        align-items: flex-end;
+        flex-direction: column;
       }
       &-images {
         grid-column: 1;
