--- a/src/gallery/scss/_gallery-light-box.scss
+++ b/src/gallery/scss/_gallery-light-box.scss
@@ -19,6 +19,7 @@
       grid-template-rows: 1fr min-content;
       grid-column-gap: 1rem;
       display: grid;
+      grid-row-gap: .5rem;
       background-color: $themeColor2;
       padding: 1rem;
 
@@ -29,6 +30,11 @@
         }
         .gm-gallery-light-box-navigation {
           opacity: 0;
+        }
+        .gm-gallery-light-box-details-toggle {
+          &:after {
+            content: '-';
+          }
         }
       }
 
@@ -87,12 +93,13 @@
         padding: 1rem .25rem;
         z-index: 0;
       }
-      &-details {
+      &-details-toggle {
         grid-column: 1;
         grid-row: 2;
-        display: flex;
-        align-items: flex-end;
-        flex-direction: column;
+        margin-left: auto;
+        &:after {
+          content: '+';
+        }
       }
       &-images {
         grid-column: 1;
