--- a/src/gallery/scss/_gallery-light-box.scss
+++ b/src/gallery/scss/_gallery-light-box.scss
@@ -43,6 +43,7 @@
         grid-row: 1;
         padding: .2rem;
         margin-left: auto;
+        cursor: pointer;
       }
 
       &-main-image {
@@ -129,18 +130,32 @@
         width: 80%;
         height: 80%;
         grid-template-columns: 1fr 1fr;
+        grid-template-rows: min-content 1fr min-content;
+
+        &-close-button {
+          grid-column: 2;
+          grid-row: 1;
+          line-height: .5rem;
+          font-size: 1.5em;
+        }
 
         &-main-image {
           grid-column: 1;
-          grid-row: 1 / span 2;
+          grid-row: 1 / span 3;
         }
         &-text {
           grid-column: 2;
-          grid-row: 1;
+          grid-row: 2;
+          opacity: 1;
+          background-color: $themeColor2;
+          color: $themeColor1;
+        }
+        &-details-toggle {
+          display: none;
         }
         &-images {
           grid-column: 2;
-          grid-row: 2;
+          grid-row: 3;
         }
       }
     }
