--- a/src/gallery/scss/_transitions.scss
+++ b/src/gallery/scss/_transitions.scss
@@ -1,5 +1,9 @@
-.fade-enter-active, .fade-leave-active {
-  transition: opacity .5s;
+//.fade-enter-active, .fade-leave-active {
+.fade-enter-active {
+  transition: opacity .2s;
+}
+.fade-leave-active {
+  transition: opacity .1s;
 }
 .fade-enter, .fade-leave-to {
   opacity: 0;
