Grid styles for .gm-frontend-gallery-posts

--- a/src/gallery/scss/__gm-frontend-gallery.scss
+++ b/src/gallery/scss/__gm-frontend-gallery.scss
@@ -2,10 +2,16 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  border: 1px solid red;
   max-width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+
+  .gm-frontend-gallery-posts {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+    grid-gap: .25rem;
+  }
 }
