--- a/src/gallery/scss/_gallery-light-box.scss
+++ b/src/gallery/scss/_gallery-light-box.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-#gm-frontend-gallery {
+.gm-frontend-gallery {
   .gm-gallery-light-box-container {
     position: fixed;
     height: 100%;
