--- a/src/gallery/scss/_gallery-post.scss
+++ b/src/gallery/scss/_gallery-post.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 
-#gm-frontend-gallery {
+.gm-frontend-gallery {
   .gm-gallery-post {
     display: inline-flex;
     position: relative;
