--- a/src/gallery/scss/_gallery-light-box.scss
+++ b/src/gallery/scss/_gallery-light-box.scss
@@ -38,12 +38,17 @@
         }
       }
 
-      &-close-button {
-        grid-column: 1;
+      &-close {
+        grid-column: 2;
         grid-row: 1;
-        padding: .2rem;
-        margin-left: auto;
-        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+
+        &-button {
+          padding: .2rem;
+          cursor: pointer;
+        }
       }
 
       &-main-image {
