--- a/src/gallery/scss/__gm-frontend-gallery.scss
+++ b/src/gallery/scss/__gm-frontend-gallery.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 #gm-frontend-main {
   margin: 0;
   padding: 0;
@@ -12,13 +14,26 @@
 
     &-posts {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: 1fr;
       grid-template-rows: auto;
       grid-gap: .25rem;
+
+      @media (min-width: $small) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      @media (min-width: $medium) {
+        grid-template-columns: repeat(3, 1fr);
+      }
+      @media (min-width: $large) {
+        grid-template-columns: repeat(4, 1fr);
+      }
     }
 
     &-loading {
       margin: 1rem;
+      display: flex;
+      width: 100%;
+      justify-content: center;
     }
   }
 }
