--- a/src/submit/scss/_submit-post.scss
+++ b/src/submit/scss/_submit-post.scss
@@ -9,6 +9,24 @@
     padding: .5rem;
     grid-column-gap: .5rem;
 
+    &-trash {
+      grid-column: 1 / span 2;
+      grid-row: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+    }
+
+    &-left {
+      grid-column: 1;
+      grid-row: 2;
+    }
+
+    &-right {
+      grid-column: 2;
+      grid-row: 2;
+    }
+
     &-upload {
       display: flex;
       align-items: center;
