--- a/src/submit/scss/__gm-frontend-submit.scss
+++ b/src/submit/scss/__gm-frontend-submit.scss
@@ -8,6 +8,8 @@
     &-form {
       &-group {
         display: grid;
+        grid-template-rows: min-content 1fr;
+        height: 100%;
         margin: 0 0 .5rem;
       }
     }
