--- a/src/submit/scss/_submit-post.scss
+++ b/src/submit/scss/_submit-post.scss
@@ -6,7 +6,7 @@
     border: 1px solid grey;
     border-radius: 0.2rem;
     margin: 1rem 0;
-    padding: .5rem;
+    padding: 1rem;
     grid-column-gap: .5rem;
 
     &-trash {
@@ -24,7 +24,11 @@
 
     &-right {
       grid-column: 2;
-      grid-row: 2;
+      grid-row: 1 / span 2;
+
+      form {
+        height: 100%;
+      }
     }
 
     &-upload {
