--- a/src/submit/scss/__gm-frontend-submit.scss
+++ b/src/submit/scss/__gm-frontend-submit.scss
@@ -11,6 +11,12 @@
         grid-template-rows: min-content 1fr;
         height: 100%;
         margin: 0 0 .5rem;
+
+        label {
+          display: grid;
+          grid-template-columns: min-content 1fr;
+          grid-column-gap: 1rem;
+        }
       }
     }
     &-button {
