--- a/src/submit/scss/_submit-post.scss
+++ b/src/submit/scss/_submit-post.scss
@@ -38,6 +38,14 @@
       align-items: center;
       justify-content: center;
       height: 15rem;
+      position: relative;
+
+      &-trash {
+        position: absolute;
+        top: 0;
+        right: 1rem;
+        cursor: pointer;
+      }
 
       img {
         max-height: 300px;
