--- a/src/submit/scss/_submit-post.scss
+++ b/src/submit/scss/_submit-post.scss
@@ -34,22 +34,29 @@
     }
 
     &-upload {
-      display: flex;
+      display: grid;
+      grid-template-rows: min-content 1fr;
+      grid-template-columns: 1fr;
       align-items: center;
       justify-content: center;
       height: 15rem;
       position: relative;
 
       &-trash {
-        position: absolute;
-        top: 0;
-        right: 1rem;
-        cursor: pointer;
+        grid-row: 1;
+        grid-column: 1;
+        display: flex;
+        justify-content: flex-end;
+        z-index: 1;
       }
 
-      img {
+      &-main {
+        grid-row: 1 / span 2;
+        grid-column: 1;
         max-height: 300px;
+        width: 100%;
         object-fit: contain;
+        z-index: 0;
       }
     }
 
