--- a/src/submit/scss/_submit-post.scss
+++ b/src/submit/scss/_submit-post.scss
@@ -10,11 +10,22 @@
     grid-column-gap: .5rem;
 
     &-trash {
-      grid-column: 1 / span 2;
       grid-row: 1;
+      grid-column: 1;
       display: flex;
-      flex-direction: column;
-      align-items: flex-end;
+      justify-content: flex-end;
+      z-index: 1;
+      height: 2rem;
+
+      &--full {
+        grid-column: 1 / span 2;
+      }
+
+      button {
+        background-color: unset;
+        color: #000000;
+        padding: .5rem;
+      }
     }
 
     &-left {
@@ -42,13 +53,19 @@
       height: 15rem;
       position: relative;
 
-      &-trash {
+      /*&-trash {
         grid-row: 1;
         grid-column: 1;
         display: flex;
         justify-content: flex-end;
         z-index: 1;
-      }
+
+        button {
+          background-color: unset;
+          color: #000000;
+          padding: .5rem;
+        }
+      }*/
 
       &-main {
         grid-row: 1 / span 2;
