--- a/src/gallery/scss/__gm-frontend-gallery.scss
+++ b/src/gallery/scss/__gm-frontend-gallery.scss
@@ -18,6 +18,10 @@
       grid-template-rows: auto;
       grid-gap: .25rem;
 
+      img {
+        object-fit: contain;
+      }
+
       @media (min-width: $small) {
         grid-template-columns: repeat(2, 1fr);
       }
