--- a/src/utilities/_variables.scss
+++ b/src/utilities/_variables.scss
@@ -2,11 +2,13 @@
 $black: #000000;
 $white: #FFFFFF;
 $active: #5bc0de;
+$danger: #8B0000;
 
 $themeColor0: transparent;
 $themeColor1: $black;
 $themeColor2: $white;
 $themeColor3: $active;
+$themeColor4: $danger;
 
 // Breakpoints
 $small: 576px;
