--- a/src/submit/scss/__gm-frontend-submit.scss
+++ b/src/submit/scss/__gm-frontend-submit.scss
@@ -1,3 +1,5 @@
+@import "../../utilities/variables";
+
 #gm-frontend-submit {
   margin: 0;
   padding: 0;
@@ -24,7 +26,7 @@
     }
     &-error {
       font-style: italic;
-      color: #8B0000;
+      color: $themeColor4;
       height: 2rem;
     }
   }
