--- a/src/submit/scss/_submit-post.scss
+++ b/src/submit/scss/_submit-post.scss
@@ -1,9 +1,11 @@
+@import "../../utilities/variables";
+
 #gm-frontend-submit {
   .gm-frontend-submit-post {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 300px;
-    border: solid 1px #ccc;
+    border: solid 1px $themeColor3;
     border-radius: 0.2rem;
     margin: 1rem 0;
     padding: 1rem;
@@ -23,7 +25,7 @@
 
       button {
         background-color: unset;
-        color: #000000;
+        color: $themeColor1;
         padding: .5rem;
       }
     }
