Added 'danger' color' for confirmation buttons

--- a/src/submit/scss/_confirmation-modal.scss
+++ b/src/submit/scss/_confirmation-modal.scss
@@ -19,6 +19,12 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+
+      &-button {
+        &--danger {
+          background-color: $themeColor5;
+        }
+      }
     }
   }
 }
