Low opacity overlay whilte submitting is active

--- a/src/submit/scss/__gm-frontend-submit.scss
+++ b/src/submit/scss/__gm-frontend-submit.scss
@@ -5,6 +5,20 @@
   padding: 0;
   width: 100%;
   max-width: 100%;
+  position: relative;
+
+  &.gm-frontend-submit--active {
+    &:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background-color: rgba($themeColor2,.5);
+      z-index: 1;
+    }
+  }
 
   .gm-frontend-submit {
     &-form {
