Import loading-button.scss

--- a/src/submit/scss/app.scss
+++ b/src/submit/scss/app.scss
@@ -2,4 +2,4 @@
 @import "submit-post";
 @import "transitions";
 @import "confirmation-modal";
-@import "submit-post-button";
+@import "../../utilities/vue/scss/loading-button";
