--- a/src/submit/scss/_submit-post.scss
+++ b/src/submit/scss/_submit-post.scss
@@ -62,6 +62,9 @@
         width: 100%;
         object-fit: contain;
         z-index: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
       }
     }
 
