--- a/src/submit/scss/app.scss
+++ b/src/submit/scss/app.scss
@@ -1,5 +1,5 @@
 @import "_gm-frontend-submit";
-@import "submit-post";
+@import "gallery-post";
 @import "transitions";
 @import "confirmation-modal";
 @import "../../utilities/vue/scss/loading-button";
