--- a/src/submit/scss/_gallery-post.scss
+++ b/src/submit/scss/_gallery-post.scss
@@ -1,7 +1,7 @@
 @import "../../utilities/variables";
 
 #gm-frontend-submit {
-  .gm-frontend-submit-post {
+  .gm-frontend-gallery-post {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 300px;
