Renamed .gm-frontend-gallery-post-upload to .gm-frontend-gallery-post-image and moved styles to _gallery-post-image.scss

--- a/src/submit/scss/app.scss
+++ b/src/submit/scss/app.scss
@@ -1,5 +1,6 @@
 @import "_gm-frontend-submit";
 @import "gallery-post";
+@import "gallery-post-image";
 @import "transitions";
 @import "confirmation-modal";
 @import "../../utilities/vue/scss/loading-button";
