--- a/src/submit/scss/_gallery-post-image.scss
+++ b/src/submit/scss/_gallery-post-image.scss
@@ -1,25 +1,27 @@
 .gm-frontend-gallery-post-image {
-  display: grid;
-  grid-template-rows: min-content 1fr;
-  grid-template-columns: 1fr;
-  align-items: center;
-  justify-content: center;
-  height: 15rem;
-  position: relative;
-
-  &-main {
-    grid-row: 1 / span 2;
-    grid-column: 1;
-    max-height: 300px;
-    width: 100%;
-    object-fit: contain;
-    z-index: 0;
-    display: flex;
-    flex-direction: column;
+  &-upload {
+    display: grid;
+    grid-template-rows: min-content 1fr;
+    grid-template-columns: 1fr;
     align-items: center;
-  }
+    justify-content: center;
+    height: 15rem;
+    position: relative;
 
-  &-file {
-    display: none;
+    &-main {
+      grid-row: 1 / span 2;
+      grid-column: 1;
+      max-height: 300px;
+      width: 100%;
+      object-fit: contain;
+      z-index: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &-file {
+      display: none;
+    }
   }
 }
