Moved ConfirmationModal.vue and _confirmation-modal.scss

--- a/src/submit/scss/app.scss
+++ b/src/submit/scss/app.scss
@@ -2,5 +2,5 @@
 @import "gallery-post";
 @import "gallery-post-image";
 @import "transitions";
-@import "confirmation-modal";
+@import "../../utilities/vue/scss/confirmation-modal";
 @import "../../utilities/vue/scss/loading-button";
