--- a/src/submit/scss/_gallery-post.scss
+++ b/src/submit/scss/_gallery-post.scss
@@ -3,13 +3,18 @@
 #gm-frontend-submit {
   .gm-frontend-gallery-post {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 300px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
     border: solid 1px $themeColor3;
     border-radius: 0.2rem;
     margin: 1rem 0;
     padding: 1rem;
     grid-column-gap: .5rem;
+
+    @media (min-width: $medium) {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 300px;
+    }
 
     &-trash {
       grid-row: 1;
@@ -20,7 +25,9 @@
       height: 2rem;
 
       &--full {
-        grid-column: 1 / span 2;
+        @media (min-width: $medium) {
+          grid-column: 1 / span 2;
+        }
       }
 
       button {
@@ -32,14 +39,24 @@
 
     &-left {
       grid-column: 1;
-      grid-row: 1 / span 3;
+      grid-row: 2;
       display: grid;
       grid-template-rows: 1fr min-content;
+
+      @media (min-width: $medium) {
+        grid-column: 1;
+        grid-row: 1 / span 3;
+      }
     }
 
     &-right {
-      grid-column: 2;
-      grid-row: 1 / span 2;
+      grid-column: 1;
+      grid-row: 1;
+
+      @media (min-width: $medium) {
+        grid-column: 2;
+        grid-row: 1 / span 2;
+      }
 
       form {
         height: 100%;
