--- a/src/submit/scss/app.scss
+++ b/src/submit/scss/app.scss
@@ -4,3 +4,5 @@
 @import "transitions";
 @import "../../utilities/vue/scss/confirmation-modal";
 @import "../../utilities/vue/scss/loading-button";
+@import "~vuetify/dist/vuetify.min.css";
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons');
