Remove border form text inputs

--- a/src/submit/scss/_gallery-post.scss
+++ b/src/submit/scss/_gallery-post.scss
@@ -1,6 +1,9 @@
 @import "../../utilities/variables";
 
 #gm-frontend-submit {
+  input[type="text"] {
+    border: none;
+  }
   .gm-frontend-gallery-post {
     display: grid;
     grid-template-columns: 1fr;
