#gm-frontend-submit background: none

--- a/src/submit/scss/_gallery-post.scss
+++ b/src/submit/scss/_gallery-post.scss
@@ -1,9 +1,8 @@
 @import "../../utilities/variables";
 
 #gm-frontend-submit {
-  input[type="text"] {
-    border: none;
-  }
+  background: none;
+
   .gm-frontend-gallery-post {
     display: grid;
     grid-template-columns: 1fr;
@@ -65,5 +64,9 @@
         height: 100%;
       }
     }
+  }
+
+  input[type="text"] {
+    border: none;
   }
 }
