--- a/src/submit/scss/_gallery-post-image.scss
+++ b/src/submit/scss/_gallery-post-image.scss
@@ -19,6 +19,12 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+
+      &-icon {
+        i.v-icon {
+          font-size: 5rem;
+        }
+      }
     }
 
     &-file {
