.gm-frontend-gallery-post-image has cursor: pointer

--- a/src/submit/scss/_gallery-post-image.scss
+++ b/src/submit/scss/_gallery-post-image.scss
@@ -1,5 +1,6 @@
 .gm-frontend-gallery-post-image {
   height: 100%;
+  cursor: pointer;
   &-upload {
     display: grid;
     grid-template-rows: min-content 1fr;
