--- a/src/submit/scss/_gallery-post.scss
+++ b/src/submit/scss/_gallery-post.scss
@@ -39,6 +39,11 @@
       }
     }
 
+    &-left,
+    &-right {
+      height: 300px;
+    }
+
     &-left {
       grid-column: 1;
       grid-row: 2;
@@ -54,6 +59,33 @@
     &-right {
       grid-column: 1;
       grid-row: 1;
+
+      .gm-frontend-gallery-post-content {
+        height: 100%;
+
+        .v-input {
+          height: inherit;
+
+          &__control {
+            height: inherit;
+          }
+          &__slot {
+            height: 85%;
+
+            .v-text-field__slot {
+              height: 100%;
+
+              textarea {
+                height: inherit;
+              }
+            }
+          }
+        }
+
+        .v-textarea {
+          height: 100%;
+        }
+      }
 
       @media (min-width: $medium) {
         grid-column: 2;
