Moved post content styles to _gallery-post-content.scss

--- a/src/submit/scss/app.scss
+++ b/src/submit/scss/app.scss
@@ -1,6 +1,7 @@
 @import "_gm-frontend-submit";
 @import "gallery-post";
 @import "gallery-post-image";
+@import "gallery-post-content";
 @import "transitions";
 @import "../../utilities/vue/scss/confirmation-modal";
 @import "../../utilities/vue/scss/loading-button";
