--- a/src/submit/scss/_gallery-post.scss
+++ b/src/submit/scss/_gallery-post.scss
@@ -15,7 +15,7 @@
 
     @media (min-width: $medium) {
       grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 300px;
+      grid-template-rows: 1fr;
     }
 
     &-trash {
