import gallery-post-trash-button

--- a/src/submit/scss/app.scss
+++ b/src/submit/scss/app.scss
@@ -2,6 +2,7 @@
 @import "gallery-post";
 @import "gallery-post-image";
 @import "gallery-post-content";
+@import "gallery-post-trash-button";
 @import "transitions";
 @import "../../utilities/vue/scss/confirmation-modal";
 @import "../../utilities/vue/scss/loading-button";
