--- a/src/submit/scss/_gallery-post.scss
+++ b/src/submit/scss/_gallery-post.scss
@@ -4,6 +4,11 @@
   background: none;
 
   .gm-frontend-gallery-post {
+    position: relative;
+    margin: 0 0 1.75rem 0;
+  }
+
+  .gm-frontend-gallery-post-card {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
