--- a/src/submit/scss/_gallery-post-image.scss
+++ b/src/submit/scss/_gallery-post-image.scss
@@ -10,6 +10,21 @@
     height: 100%;
     position: relative;
 
+    &:hover {
+      .gm-frontend-gallery-post-image-upload-trash {
+        opacity: 1;
+      }
+    }
+
+    &-trash {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      z-index: 1;
+      opacity: 0;
+      transition: opacity .25s;
+    }
+
     &-main {
       grid-row: 1 / span 2;
       grid-column: 1;
