Hover styles for the trash image button

--- a/src/submit/scss/_gallery-post-image.scss
+++ b/src/submit/scss/_gallery-post-image.scss
@@ -12,7 +12,11 @@
 
     &:hover {
       .gm-frontend-gallery-post-image-upload-trash {
-        opacity: 1;
+        opacity: .5;
+
+        &:hover {
+          opacity: 1;
+        }
       }
     }
 
