--- a/src/submit/scss/_gallery-post.scss
+++ b/src/submit/scss/_gallery-post.scss
@@ -44,10 +44,10 @@
       }
     }
 
-    &-left,
+    /*&-left,
     &-right {
       height: 300px;
-    }
+    }*/
 
     &-left {
       grid-column: 1;
