--- a/src/submit/scss/app.scss
+++ b/src/submit/scss/app.scss
@@ -6,5 +6,6 @@
 @import "transitions";
 @import "../../utilities/vue/scss/confirmation-modal";
 @import "../../utilities/vue/scss/loading-button";
+@import "gallery-post-submit-button";
 @import "~vuetify/dist/vuetify.min.css";
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons');
