--- a/src/submit/scss/_gallery-post-trash-button.scss
+++ b/src/submit/scss/_gallery-post-trash-button.scss
@@ -1,5 +1,5 @@
 .gm-frontend-gallery-post-trash-button {
-  position: absolute;
-  right: -1.25rem;
-  top: -1.25rem;
+  //position: absolute;
+  //right: -1.25rem;
+  //top: -1.25rem;
 }
