--- a/src/submit/scss/__gm-frontend-submit.scss
+++ b/src/submit/scss/__gm-frontend-submit.scss
@@ -43,9 +43,18 @@
       color: $themeColor5;
       height: 2rem;
     }
+
+    &__footer {
+      &__add-one-button {
+        display: none;
+      }
+    }
+    &__max-attachment-message {
+      margin: .5rem 0;
+    }
   }
 
-  .gm-frontend-submit__footer__add-one-button {
+  /*.gm-frontend-submit__footer__add-one-button {
     display: none;
-  }
+  }*/
 }
