--- a/src/submit/scss/_gallery-post.scss
+++ b/src/submit/scss/_gallery-post.scss
@@ -6,6 +6,10 @@
   .gm-frontend-gallery-post {
     position: relative;
     margin: 0 0 1.75rem 0;
+
+    &:last-child {
+      margin: 0;
+    }
   }
 
   .gm-frontend-gallery-post-card {
@@ -14,7 +18,6 @@
     grid-template-rows: 1fr 1fr;
     border: solid 1px $themeColor3;
     border-radius: 0.2rem;
-    margin: 1rem 0;
     padding: 1rem;
     grid-column-gap: .5rem;
 
