--- a/src/submit/scss/__gm-frontend-submit.scss
+++ b/src/submit/scss/__gm-frontend-submit.scss
@@ -44,13 +44,24 @@
       height: 2rem;
     }
 
+    &__header {
+      margin: .5rem 0;
+    }
+
     &__footer {
+      &__messages {
+        display: flex;
+        margin: .5rem 0;
+
+        &__max-attachment {
+          .v-messages__message {
+            text-align: end;
+          }
+        }
+      }
       &__add-one-button {
         display: none;
       }
-    }
-    &__max-attachment-message {
-      margin: .5rem 0;
     }
   }
 
