--- a/src/submit/scss/_gallery-post.scss
+++ b/src/submit/scss/_gallery-post.scss
@@ -15,7 +15,7 @@
   .gm-frontend-gallery-post-card {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: min-content 1fr 1fr;
     border: solid 1px $themeColor3;
     border-radius: 0.2rem;
     padding: 1rem;
@@ -27,13 +27,29 @@
     }
 
     &__controls {
+      grid-row: 1;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
+      flex-direction: row-reverse;
+      justify-content: right;
       align-items: center;
+      position: absolute;
+      top: -2.5rem;
+      right: -1.25rem;
 
       button {
-        margin: 0 0 .5rem 0;
+        margin: 0 0 .5rem 0.5rem;
+      }
+
+      @media (min-width: $medium) {
+        position: relative;
+        top: unset;
+        right: unset;
+        flex-direction: column;
+        justify-content: center;
+
+        button {
+          margin: 0 0 .5rem 0;
+        }
       }
     }
 
@@ -77,7 +93,7 @@
 
     &-right {
       grid-column: 1;
-      grid-row: 1;
+      grid-row: 3;
 
       @media (min-width: $medium) {
         grid-column: 2;
