--- a/src/submit/scss/_gallery-post.scss
+++ b/src/submit/scss/_gallery-post.scss
@@ -94,10 +94,12 @@
     &-right {
       grid-column: 1;
       grid-row: 3;
+      margin: .5rem 0 0 0;
 
       @media (min-width: $medium) {
         grid-column: 2;
         grid-row: 1 / span 2;
+        margin: 0;
       }
 
       textarea {
