--- a/src/gallery/scss/app.scss
+++ b/src/gallery/scss/app.scss
@@ -3,3 +3,7 @@
 @import 'gallery-light-box';
 @import 'transitions';
 @import "../../utilities/vue/scss/loading-button";
+@import "~vuetify/dist/vuetify.min.css";
+
+@import "gallery-image";
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons');
