--- a/src/gallery/scss/__gm-frontend-gallery.scss
+++ b/src/gallery/scss/__gm-frontend-gallery.scss
@@ -5,52 +5,18 @@
   background: none;
 
   .gm-frontend-gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-  }
-}
-
-/*
-#gm-frontend-main {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  max-width: 100%;
-  background: none;
-
-  .gm-frontend-gallery {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-
-    &-posts {
+    &__main {
       display: grid;
       grid-template-columns: 1fr;
-      grid-template-rows: auto;
-      grid-gap: .25rem;
-
-      img {
-        object-fit: contain;
-      }
+      grid-column-gap: 1rem;
+      grid-row-gap: 1rem;
 
       @media (min-width: $small) {
         grid-template-columns: repeat(2, 1fr);
       }
-      @media (min-width: $medium) {
+      @media (min-width: $large) {
         grid-template-columns: repeat(3, 1fr);
       }
-      @media (min-width: $large) {
-        grid-template-columns: repeat(4, 1fr);
-      }
-    }
-
-    &-loading {
-      margin: 1rem;
-      display: flex;
-      width: 100%;
-      justify-content: center;
     }
   }
-}*/
+}
