New carousel component

--- a/src/gallery/scss/app.scss
+++ b/src/gallery/scss/app.scss
@@ -1,6 +1,8 @@
 @import '_gm-frontend-gallery';
 @import 'gallery-post';
 @import 'gallery-light-box';
+@import 'gallery-carousel';
+@import 'gallery-detail';
 @import 'transitions';
 @import "../../utilities/vue/scss/loading-button";
 @import "~vuetify/dist/vuetify.min.css";
