--- a/src/gallery/scss/_gallery-carousel.scss
+++ b/src/gallery/scss/_gallery-carousel.scss
@@ -6,9 +6,13 @@
     top: 0;
     left: 0;
     background-color: rgba($themeColor1, .5);
-    //height: 100%;
-    //display: flex;
-    //align-items: center;
-    //justify-content: center;
+    .v-window__prev,
+    .v-window__next {
+      button {
+        &.theme--light.v-btn.v-btn--icon {
+          color: $themeColor2;
+        }
+      }
+    }
   }
 }
