Import _base.scss

--- a/src/gallery/scss/app.scss
+++ b/src/gallery/scss/app.scss
@@ -1,4 +1,5 @@
 @import '_gm-frontend-gallery';
+@import 'base';
 @import 'gallery-post';
 @import 'gallery-light-box';
 @import 'gallery-carousel';
