--- a/src/gallery/scss/_gallery-detail.scss
+++ b/src/gallery/scss/_gallery-detail.scss
@@ -8,8 +8,16 @@
   &__main {
     display: grid;
     grid-template-columns: 50% 50%;
-    height: 90%;
+    min-height: 35rem;
+    max-height: 90%;
+    overflow-y: scroll;
     width: 80%;
     background: white;
+  }
+  &__col-1,
+  &__col-2 {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
   }
 }
