--- a/src/gallery/scss/_gallery-carousel.scss
+++ b/src/gallery/scss/_gallery-carousel.scss
@@ -14,5 +14,12 @@
         }
       }
     }
+    &__close-button {
+      color: $themeColor2;
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      z-index: 1;
+    }
   }
 }
