GalleryDetail is now 100% of screen

--- a/src/gallery/scss/_gallery-detail.scss
+++ b/src/gallery/scss/_gallery-detail.scss
@@ -8,10 +8,9 @@
   &__main {
     display: grid;
     grid-template-columns: 50% 50%;
-    min-height: 35rem;
-    max-height: 90%;
+    height: 100%;
+    width: 100%;
     overflow-y: scroll;
-    width: 80%;
     background: white;
   }
   &__col-1,
