Use  instead of 'white.' What is this, amateur hour?

--- a/src/gallery/scss/_gallery-detail.scss
+++ b/src/gallery/scss/_gallery-detail.scss
@@ -11,7 +11,7 @@
     height: 100%;
     width: 100%;
     overflow-y: scroll;
-    background: white;
+    background: $themeColor2;
   }
   &__col-1,
   &__col-2 {
