--- a/src/gallery/scss/_gallery-detail.scss
+++ b/src/gallery/scss/_gallery-detail.scss
@@ -1,9 +1,7 @@
 @import "../../utilities/variables";
 
 .gm-frontend-gallery__detail {
-  display: flex;
-  justify-content: center;
-  //align-items: center;
+  height: 100%;
   &__main {
     display: grid;
     grid-template-columns: 50% 50%;
@@ -12,21 +10,12 @@
     width: 90%;
     overflow-y: scroll;
     box-shadow: none;
+    margin: 0 auto;
   }
   &__col-1 {
-    grid-area: col-1;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr min-content;
-    grid-template-areas: 'selected-image attached-images';
     &__selected-image {
-      grid-area: selected-image;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      &__main {
-        flex-grow: 0;
-      }
+      height: 35rem;
+      width: 100%;
     }
     &__attached-images {
       grid-area: attached-images;
