--- a/src/gallery/scss/_gallery-detail.scss
+++ b/src/gallery/scss/_gallery-detail.scss
@@ -21,20 +21,31 @@
     grid-template-areas: 'selected-image attached-images';
     &__selected-image {
       grid-area: selected-image;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      &__main {
+        flex-grow: 0;
+      }
     }
     &__attached-images {
       grid-area: attached-images;
-      height: 10rem;
-      img {
-        max-height: 100%;
-        max-width: 20%;
-        padding: .5rem;
-
-        &:first-child {
-          padding: .5rem .5rem .5rem 0;
-        }
-        &:last-child {
-          padding: .5rem 0 .5rem .5rem;
+      height: 8rem;
+      display: grid;
+      grid-template-rows: 1fr;
+      grid-template-columns: repeat(5, 1fr);
+      grid-column-gap: .5rem;
+      width: calc(100% - .5rem);
+      margin: 1rem .25rem;
+      &__container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        img {
+          object-fit: cover;
+          max-width: 100%;
+          max-height: 100%;
         }
       }
     }
