--- a/src/gallery/scss/_gallery-detail.scss
+++ b/src/gallery/scss/_gallery-detail.scss
@@ -45,7 +45,7 @@
         align-items: center;
         &--active {
           img {
-            outline: .25rem solid green;
+            outline: .25rem solid $themeColor4;
           }
         }
         img {
