--- a/src/gallery/scss/_gallery-detail.scss
+++ b/src/gallery/scss/_gallery-detail.scss
@@ -25,19 +25,10 @@
       margin: 1rem .25rem;
       &__image {
         $self: &;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        height: inherit;
+        width: 7rem;
         &--active {
-          img {
-            outline: .25rem solid $themeColor4;
-          }
-        }
-        img {
-          object-fit: cover;
-          max-width: 100%;
-          max-height: 100%;
+          box-shadow: 0 0 0 .25rem $themeColor4;
         }
       }
     }
