--- a/src/gallery/scss/_gallery-detail.scss
+++ b/src/gallery/scss/_gallery-detail.scss
@@ -20,15 +20,20 @@
       display: grid;
       grid-template-rows: 1fr;
       grid-template-columns: repeat(5, 1fr);
-      grid-column-gap: .5rem;
-      width: calc(100% - .5rem);
+      grid-column-gap: 1rem;
+      width: calc(100% - 1rem);
       margin: 1rem .25rem;
       &__image {
         $self: &;
         height: inherit;
-        width: 7rem;
+        width: 6.85rem;
         &--active {
           box-shadow: 0 0 0 .25rem $themeColor4;
+        }
+        &:not(#{$self}--active) {
+          &:hover {
+            box-shadow: 0 0 0 .25rem rgba($themeColor4, .5);
+          }
         }
       }
     }
