--- a/src/gallery/scss/_gallery-detail.scss
+++ b/src/gallery/scss/_gallery-detail.scss
@@ -2,10 +2,10 @@
 
 .gm-frontend-gallery__detail {
   height: 100%;
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-areas: 'col-1 col-2';
   width: 90%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: 'col-1 col-2';
   overflow-y: scroll;
   box-shadow: none;
   margin: 0 auto;
@@ -21,12 +21,11 @@
       grid-template-rows: 1fr;
       grid-template-columns: repeat(5, 1fr);
       grid-column-gap: 1rem;
-      width: calc(100% - 1rem);
-      margin: 1rem .25rem;
+      width: calc(100% - .5rem);
+      margin: 1rem 0.25rem;
       &__image {
         $self: &;
-        height: inherit;
-        width: 6.85rem;
+        min-width: 0;
         &--active {
           box-shadow: 0 0 0 .25rem $themeColor4;
         }
@@ -49,6 +48,7 @@
     display: flex;
     flex-direction: column;
     padding: 1rem;
+    min-width: 0;
   }
   &__close-button {
     position: absolute;
