--- a/src/gallery/scss/_gallery-detail.scss
+++ b/src/gallery/scss/_gallery-detail.scss
@@ -30,7 +30,8 @@
           box-shadow: 0 0 0 .25rem $themeColor4;
         }
         &:not(#{$self}--active) {
-          &:hover {
+          &:hover,
+          &:focus {
             box-shadow: 0 0 0 .25rem rgba($themeColor4, .5);
           }
         }
