--- a/src/utilities/_variables.scss
+++ b/src/utilities/_variables.scss
@@ -5,6 +5,7 @@ $white: #FFFFFF;
 $grey: #cccccc;
 $active: #5bc0de;
 $danger: #8B0000;
+$info: #ffc107;
 
 $themeColor0: $transparent;
 $themeColor1: $black;
@@ -12,6 +13,7 @@ $themeColor2: $white;
 $themeColor3: $grey;
 $themeColor4: $active;
 $themeColor5: $danger;
+$themeColor6: $info;
 
 // Breakpoints
 $small: 576px;
