--- a/src/gallery/scss/_gallery-detail.scss
+++ b/src/gallery/scss/_gallery-detail.scss
@@ -26,18 +26,14 @@
       &__image {
         $self: &;
         min-width: 0;
-        &--active {
-          box-shadow: 0 0 0 .25rem $themeColor4;
-        }
-        /*&:not(#{$self}--active) {
-          &:hover,
-          &:focus {
-            box-shadow: 0 0 0 .25rem rgba($themeColor4, .5);
-          }
-        }*/
+        opacity: .5;
+        &--active,
         &:hover,
         &:focus {
-          box-shadow: 0 0 0 .5rem $themeColor6;
+          opacity: 1;
+        }
+        &:focus {
+          box-shadow: 0 0 0 .25rem $themeColor4;
         }
       }
     }
